# nuScenes-3D-Detect_ws

./: .gitignore  GEMINI.md  README.md  howtoinstall
seonju/: metadata.yaml
src/voxelnext_pkg/: CMakeLists.txt  package.xml  requirements.txt  voxelnext_load.py
src/voxelnext_pkg/docs/: INSTALL.md
src/voxelnext_pkg/launch/: 2D_object_detect.launch  3D_object_detect.launch  3D_object_detect.launch.py  center_object_detect.launch  object_detect.launch  object_detect.rviz
src/voxelnext_pkg/pcdet/: config.py
src/voxelnext_pkg/pcdet/datasets/: live_lidar_dataset.py
src/voxelnext_pkg/pcdet/models/backbones_3d/: spconv_backbone_voxelnext.py
src/voxelnext_pkg/scripts/: 2D_object_detect.py  3D_object_detect.py  center_object_detect.py  model.py  object_detect.py
src/voxelnext_pkg/tools/cfgs/dataset_configs/: nuscenes_dataset.yaml
src/voxelnext_pkg/tools/cfgs/nuscenes_models/: cbgs_voxel0075_voxelnext.yaml
