<?xml version="1.0"?>
<package format="3">
  <name>voxelnext_pkg</name>
  <version>0.0.0</version>
  <description>The voxelnext_pkg package</description>
  <maintainer email="cds730@naver.com">hannibal</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>vehicle_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-torch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
